# crude-or-rude

./: .commitlintrc.json  .env.example  .gitignore  .gitmessage  CLAUDE_DESKTOP_SETUP.md  COMMIT_CONVENTIONS.md  MCP_SETUP.md  README.md  claude_desktop_config.example.json  demo.sh  pyproject.toml  test_bedrock.py  test_integration.py  test_manual.py
.devcontainer/: devcontainer.json  example.env
.github/: COMMIT_CONVENTIONS.md  copilot-instructions.md  pull_request_template.md
.github/workflows/: validate-commits.yml
examples/claude-desktop-config/: claude_desktop_config_linux.json  claude_desktop_config_windows.json
src/crude_or_rude/: __init__.py  main.py  mcp_server.py  server.py  server_main.py  workflow.py
src/crude_or_rude/models/: __init__.py
src/crude_or_rude/nodes/: __init__.py  claude.py  rudeness.py  sentiment.py
src/crude_or_rude/services/: __init__.py
tests/: __init__.py  test_crude_or_rude.py  test_mcp_server.py
